--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section id="about" class=" d-flex justify-content-center align-items-center justify-content-between p-5  ">
     <div class="col-lg-4">
-      <figure><img class="perf" src="perfil.jpg" alt=""></figure>
+      <figure><img class="perf" src="view/perfil.jpg" alt=""></figure>
     </div>
     <div>
       <h2>About me</h2>
@@ -52,7 +52,9 @@
         me and my team can achieve success.
       </p>
     </div>
-    <div> <button class="btn btn-dark"> Veja meus projetos</button></div>
+    <a href="#projects">
+      <div> <button class="btn btn-dark">see my projects</button></div>
+    </a>
   </section>
 
   <section id="formation" class="d-flex justify-content-center justify-content-around p-5 ">
@@ -63,7 +65,6 @@
         <li>Analysis and systems development</li>
         <li>Spring framework</li>
         <li>Junit test</li>
-        
       </Ul>
 
 
@@ -80,7 +81,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="cripto.png" alt="">
+              <img src="view/cripto.png" alt="">
               <div class="card-body">
                 <p class="card-text">in this project I developed a cryptocurrency crud, it was part of the beginning in java</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -93,7 +94,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm" >
-              <img src="encurtathor.png" alt="">
+              <img src="view/encurtathor.png" alt="">
               
               <div class="card-body">
                 <p class="card-text">This project was made in java and spring technologies, and it is a link shortener like blitly</p>
@@ -109,7 +110,7 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="projetosite.png" alt="">
+              <img src="view/projetosite.png" alt="">
               <div class="card-body">
                 <p class="card-text">
                   my first big project.
